--- a/prijateli_tree/app/templates/base.html
+++ b/prijateli_tree/app/templates/base.html
@@ -19,8 +19,9 @@
     <link href="{{ url_for('static', path='/mui.min.js') }}">
   </head>
   <body role="document">
-    {% block content %}
-    {% endblock content %}
-    lolwat
+    <div class="mui-appbar">
+      {% block content %}
+      {% endblock content %}
+    </div>
   </body>
 </html>
