--- a/prijateli_tree/app/templates/base.html
+++ b/prijateli_tree/app/templates/base.html
@@ -15,12 +15,11 @@
         Prijateli Tree
       {% endblock title %}
     </title>
-    <link href="{{ url_for('static', path='/mui.min.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', path='/mui.min.js') }}">
+    <link href="{{ url_for('static', path='/materialize.min.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', path='/materialize.min.js') }}">
   </head>
   <body role="document">
     {% block content %}
     {% endblock content %}
-    lolwat
   </body>
 </html>
