--- a/prijateli_tree/app/templates/base.html
+++ b/prijateli_tree/app/templates/base.html
@@ -15,12 +15,18 @@
         Prijateli Tree
       {% endblock title %}
     </title>
-    <link href="{{ url_for('static', path='/mui.min.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', path='/mui.min.js') }}">
+    <link href="{{ url_for('static', path='/materialize.min.css') }}"
+          rel="stylesheet">
+    <link href="{{ url_for('static', path='/custom.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', path='/materialize.min.js') }}">
   </head>
   <body role="document">
+    <nav>
+      <div class="nav-wrapper">
+        <div id="app-logo"></div>
+      </div>
+    </nav>
     {% block content %}
     {% endblock content %}
-    lolwat
   </body>
 </html>
