Adding game start html template

--- a/prijateli_tree/app/templates/game_start.html
+++ b/prijateli_tree/app/templates/game_start.html
@@ -1,37 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Red or Blue Game</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #F8E2D4;
-        }
-        .button {
-            padding: 20px 30px;
-            border: none;
-            background-color: #FFFFFF;
-            border-radius: 20px;
-            cursor: pointer;
-        }
-    </style>
-</head>
-<body>
-    <h1>Get Ready to Play</h1>
-    <h2 style="color:red;">Red</h2>
-    <h3>or</h3>
-    <h2 style="color:blue;">Blue!</h2>
-    <br><br>
-    <button class="button" onclick="startGame()">I'm Ready!</button>
-
-    <script>
-        function startGame() {
-            // You can either redirect to another page or make an API call here
-            window.location.href = "/start_game"; // Replace with your desired endpoint or functionality
-        }
-    </script>
-</body>
-</html>
+{% extends "base.html" %}
