Adding html elements

--- a/prijateli_tree/app/templates/game_start.html
+++ b/prijateli_tree/app/templates/game_start.html
@@ -2,3 +2,11 @@
 {% block title %}
   PrijateliTree - Game Start
 {% endblock title %}
+{% block content}
+    <h1>Get Ready to Play</h1>
+    <h2 style="color:red;">Red</h2>
+    <h3>or</h3>
+    <h2 style="color:blue;">Blue!</h2>
+    <button class="button" onclick="startGame()">I'm Ready!</button>
+
+{% endblock content %}
