--- a/prijateli_tree/app/templates/admin_login.html
+++ b/prijateli_tree/app/templates/admin_login.html
@@ -27,5 +27,10 @@
       <input id="birthdate" name="birthdate_str" type="text" class="datepicker">
       <label for="birthdate">Birthdate</label>
     </div>
+    <button class="btn icon-right waves-effect waves-light"
+            type="submit"
+            value="submit">
+      Login<i class="material-icons right">send</i>
+    </button>
   </form>
 {% endblock content %}
