--- a/prijateli_tree/app/templates/game_start.html
+++ b/prijateli_tree/app/templates/game_start.html
@@ -15,7 +15,5 @@
             value="submit">
     I'm Ready!<i class="material-icons right">send</i>
     </button>
-    </form>
-    
-
+    </form
 {% endblock content %}
