--- a/prijateli_tree/app/templates/base.html
+++ b/prijateli_tree/app/templates/base.html
@@ -15,10 +15,10 @@
         Prijateli Tree
       {% endblock title %}
     </title>
-    <link href="{{ url_for('static', path='/materialize.min.css') }}"
+    <link href="{{ url_for('static', path='/bootstrap.min.css') }}"
           rel="stylesheet">
     <link href="{{ url_for('static', path='/custom.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', path='/materialize.min.js') }}">
+    <link href="{{ url_for('static', path='/bootstrap.bundle.min.js') }}">
   </head>
   <body role="document">
     <nav>
