--- a/prijateli_tree/app/templates/base.html
+++ b/prijateli_tree/app/templates/base.html
@@ -21,9 +21,11 @@
     <link href="{{ url_for('static', path='/bootstrap.bundle.min.js') }}">
   </head>
   <body role="document">
-    <nav>
-      <div class="nav-wrapper">
-        <div id="app-logo"></div>
+    <nav class="navbar bg-body-tertiary">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img src="/images/logo.png" alt="UChicago" width="30" height="24">
+        </a>
       </div>
     </nav>
     {% block content %}
