--- a/prijateli_tree/app/templates/base.html
+++ b/prijateli_tree/app/templates/base.html
@@ -20,7 +20,7 @@
     <link href="{{ url_for('static', path='/custom.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', path='/bootstrap.bundle.min.js') }}">
   </head>
-  <body role="document">
+  <body role="document" data-bs-theme="dark">
     <nav class="navbar bg-body-tertiary">
       <div class="container-fluid">
         <div class="navbar-brand">
