--- a/prijateli_tree/app/templates/admin_login.html
+++ b/prijateli_tree/app/templates/admin_login.html
@@ -16,7 +16,7 @@
           <div class="mb-3 row">
             <label for="last_name" class="col-sm-3 col-form-label">Last Name:</label>
             <div class="col-sm-9">
-              <input type="email" class="form-control" id="last_name" name="last_name">
+              <input type="text" class="form-control" id="last_name" name="last_name">
             </div>
           </div>
           <div class="mb-3 row">
