--- a/prijateli_tree/app/templates/base.html
+++ b/prijateli_tree/app/templates/base.html
@@ -19,6 +19,8 @@
           rel="stylesheet">
     <link href="{{ url_for('static', path='/custom.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', path='/bootstrap.bundle.min.js') }}">
+    {% block helper_script %}
+    {% endblock helper_script %}
   </head>
   <body role="document" data-bs-theme="dark">
     <nav class="navbar bg-body-tertiary">
