--- a/prijateli_tree/app/templates/ready_to_play.html
+++ b/prijateli_tree/app/templates/ready_to_play.html
@@ -3,17 +3,15 @@
   PrijateliTree - Game Start
 {% endblock title %}
 {% block content}
-    <h1>Get Ready to Play</h1>
-    <h2 style="color:red;">Red</h2>
-    <h3>or</h3>
-    <h2 style="color:blue;">Blue!</h2>
-    <form class="row"
-    method="post"
-    action="{{ url_for('confirm_ready') }}">
+  <h1>Get Ready to Play</h1>
+  <h2 style="color:red;">Red</h2>
+  <h3>or</h3>
+  <h2 style="color:blue;">Blue!</h2>
+  <form class="row" method="post" action="{{ url_for("confirm_ready") }}">
     <button class="btn icon-right waves-effect waves-light"
             type="submit"
             value="submit">
-    I'm Ready!<i class="material-icons right">send</i>
+      I'm Ready!<i class="material-icons right">send</i>
     </button>
-    </form
+  </form
 {% endblock content %}
