--- a/prijateli_tree/app/templates/base.html
+++ b/prijateli_tree/app/templates/base.html
@@ -15,10 +15,22 @@
         Prijateli Tree
       {% endblock title %}
     </title>
-    <link href="{{ url_for('static', path='/bootstrap.min.css') }}"
+    <link href="{{ url_for('static', path='/css/bootstrap.min.css') }}"
           rel="stylesheet">
-    <link href="{{ url_for('static', path='/custom.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', path='/bootstrap.bundle.min.js') }}">
+    <link href="{{ url_for('static', path='/css/custom.css') }}"
+          rel="stylesheet">
+    <script type="text/javascript"
+            charset="utf8"
+            href="{{ url_for('static', path='/js/bootstrap.bundle.min.js') }}"></script>
+    <script type="text/javascript"
+            charset="utf8"
+            href="{{ url_for('static', path='/js/jquery-3.6.0.min.js') }}"></script>
+    <script type="text/javascript"
+            charset="utf8"
+            href="{{ url_for('static', path='/js/jquery.dataTables.js') }}"></script>
+    <script type="text/javascript"
+            charset="utf8"
+            href="{{ url_for('static', path='/js/dataTables.bootstrap5.js') }}"></script>
     {% block helper_script %}
     {% endblock helper_script %}
   </head>
