--- a/prijateli_tree/app/templates/base.html
+++ b/prijateli_tree/app/templates/base.html
@@ -27,10 +27,10 @@
             href="{{ url_for('static', path='/js/jquery-3.6.0.min.js') }}"></script>
     <script type="text/javascript"
             charset="utf8"
-            href="{{ url_for('static', path='/js/jquery.dataTables.js') }}"></script>
+            href="{{ url_for('static', path='/js/jquery.dataTables.min.js') }}"></script>
     <script type="text/javascript"
             charset="utf8"
-            href="{{ url_for('static', path='/js/dataTables.bootstrap5.js') }}"></script>
+            href="{{ url_for('static', path='/js/dataTables.bootstrap5.min.js') }}"></script>
     {% block helper_script %}
     {% endblock helper_script %}
   </head>
