--- a/prijateli_tree/app/static/css/custom.css
+++ b/prijateli_tree/app/static/css/custom.css
@@ -4,6 +4,11 @@
     border-radius: 10px;
 }
 
+div.table-container {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
 tr.empty-table {
     text-align: center;
 }
