--- a/prijateli_tree/app/templates/admin_dashboard.html
+++ b/prijateli_tree/app/templates/admin_dashboard.html
@@ -32,6 +32,7 @@
                 <td colspan="5">There are no games currently in the system.</td>
               </tr>
             {% endif %}
+            {% for g in games %}{% endfor %}
           </tbody>
         </table>
       </div>
@@ -55,6 +56,7 @@
                 <td colspan="8">There are no students currently in the system.</td>
               </tr>
             {% endif %}
+            {% for s in students %}{% endfor %}
           </tbody>
         </table>
       </div>
@@ -75,6 +77,7 @@
                 <td colspan="5">There are no denir transactions currently in the system.</td>
               </tr>
             {% endif %}
+            {% for t in transactions %}{% endfor %}
           </tbody>
         </table>
       </div>
@@ -93,6 +96,7 @@
                 <td colspan="5">There are no game types currently in the system.</td>
               </tr>
             {% endif %}
+            {% for gt in game_types %}{% endfor %}
           </tbody>
         </table>
       </div>
