--- a/prijateli_tree/app/static/css/custom.css
+++ b/prijateli_tree/app/static/css/custom.css
@@ -1,12 +1,17 @@
 .form-container {
+    border-radius: 10px;
     margin-top: 50px;
     padding: 30px 10px;
-    border-radius: 10px;
 }
 
 div.table-container {
-    padding-top: 20px;
+    border-radius: 6px;
+    border: 1px solid #b0b6bc;
+    margin-top: 20px;
+    max-height: 400px;
+    overflow-y: auto;
     padding-bottom: 20px;
+    padding-top: 20px;
 }
 
 tr.empty-table {
