--- a/prijateli_tree/app/static/css/custom.css
+++ b/prijateli_tree/app/static/css/custom.css
@@ -14,6 +14,10 @@ div.table-container {
     padding-top: 20px;
 }
 
+.table-container button {
+    float: right;
+}
+
 tr.empty-table {
     text-align: center;
 }
