--- a/prijateli_tree/app/templates/base.html
+++ b/prijateli_tree/app/templates/base.html
@@ -20,17 +20,13 @@
     <link href="{{ url_for('static', path='/css/custom.css') }}"
           rel="stylesheet">
     <script type="text/javascript"
-            charset="utf8"
-            href="{{ url_for('static', path='/js/bootstrap.bundle.min.js') }}"></script>
+            src="{{ url_for('static', path='/js/bootstrap.bundle.min.js') }}"></script>
     <script type="text/javascript"
-            charset="utf8"
-            href="{{ url_for('static', path='/js/jquery-3.6.0.min.js') }}"></script>
+            src="{{ url_for('static', path='/js/jquery-3.6.0.min.js') }}"></script>
     <script type="text/javascript"
-            charset="utf8"
-            href="{{ url_for('static', path='/js/jquery.dataTables.min.js') }}"></script>
+            src="{{ url_for('static', path='/js/jquery.dataTables.min.js') }}"></script>
     <script type="text/javascript"
-            charset="utf8"
-            href="{{ url_for('static', path='/js/dataTables.bootstrap5.min.js') }}"></script>
+            src="{{ url_for('static', path='/js/dataTables.bootstrap5.min.js') }}"></script>
     {% block helper_script %}
     {% endblock helper_script %}
   </head>
