Create base for Admin Dashboard (#36)
## Describe Your Changes
Added functionality:
- Ability to logout of application
- Tables showing transactions, users, games, and game types
- Add base of modal for creating new games

## Checklist Before Requesting a Review
- [x] The code runs successfully.

```commandline
2023-11-09 21:15:30 prijatelitree-web-1       | INFO:     192.168.65.1:54558 - "GET /admin/dashboard HTTP/1.1" 200 OK
2023-11-09 21:15:30 prijatelitree-web-1       | INFO:     192.168.65.1:54558 - "GET /css/custom.css HTTP/1.1" 304 Not Modified
2023-11-09 21:16:14 prijatelitree-web-1       | INFO:     192.168.65.1:54573 - "GET /admin/dashboard HTTP/1.1" 200 OK
2023-11-09 21:16:15 prijatelitree-web-1       | INFO:     192.168.65.1:54573 - "GET /admin/dashboard HTTP/1.1" 200 OK
2023-11-09 21:16:52 prijatelitree-web-1       | INFO:     192.168.65.1:54587 - "GET /admin/dashboard HTTP/1.1" 200 OK
2023-11-09 21:17:10 prijatelitree-web-1       | INFO:     192.168.65.1:54594 - "GET /admin/dashboard HTTP/1.1" 200 OK
2023-11-09 21:17:10 prijatelitree-web-1       | INFO:     192.168.65.1:54594 - "GET /css/custom.css HTTP/1.1" 304 Not Modified
```
<img width="1470" alt="Screenshot 2023-11-09 at 9 20 13 PM"
src="https://github.com/prijatelilab/PrijateliTree/assets/5885605/4f77509a-9f86-4202-a7db-7a08e2b8a4ac">

<img width="1470" alt="Screenshot 2023-11-09 at 9 20 21 PM"
src="https://github.com/prijatelilab/PrijateliTree/assets/5885605/031e07b7-efbd-46b0-81c0-b5f2da4de05e">

<img width="809" alt="Screenshot 2023-11-09 at 9 20 32 PM"
src="https://github.com/prijatelilab/PrijateliTree/assets/5885605/c9261ccf-bf2e-4f79-b42a-4fbc93f5dbf0">

--- a/prijateli_tree/app/templates/base.html
+++ b/prijateli_tree/app/templates/base.html
@@ -15,10 +15,18 @@
         Prijateli Tree
       {% endblock title %}
     </title>
-    <link href="{{ url_for('static', path='/bootstrap.min.css') }}"
+    <link href="{{ url_for('static', path='/css/bootstrap.min.css') }}"
           rel="stylesheet">
-    <link href="{{ url_for('static', path='/custom.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', path='/bootstrap.bundle.min.js') }}">
+    <link href="{{ url_for('static', path='/css/custom.css') }}"
+          rel="stylesheet">
+    <script type="text/javascript"
+            src="{{ url_for('static', path='/js/bootstrap.bundle.min.js') }}"></script>
+    <script type="text/javascript"
+            src="{{ url_for('static', path='/js/jquery-3.6.0.min.js') }}"></script>
+    <script type="text/javascript"
+            src="{{ url_for('static', path='/js/jquery.dataTables.min.js') }}"></script>
+    <script type="text/javascript"
+            src="{{ url_for('static', path='/js/dataTables.bootstrap5.min.js') }}"></script>
     {% block helper_script %}
     {% endblock helper_script %}
   </head>
@@ -29,6 +37,11 @@
           <img src="../static/images/logo.png" alt="UChicago" height="35">
           <span>Prijateli Tree</span>
         </div>
+        {% if user %}
+          <form class="d-flex" action='{{ url_for("logout") }}'>
+            <button class="btn btn-primary" type="submit">Logout</button>
+          </form>
+        {% endif %}
       </div>
     </nav>
     {% block content %}
