--- a/prijateli_tree/app/templates/ready.html
+++ b/prijateli_tree/app/templates/ready.html
@@ -7,7 +7,7 @@
   <h2 style="color:red;">Red</h2>
   <h3>or</h3>
   <h2 style="color:blue;">Blue!</h2>
-  <form class="row" method="post" action="{{ url_for("confirm_ready") }}">
+  <form class="row" method="post" action='{{ url_for("confirm_ready") }}'>
     <button class="btn icon-right waves-effect waves-light"
             type="submit"
             value="submit">
