--- a/prijateli_tree/app/templates/ready.html
+++ b/prijateli_tree/app/templates/ready.html
@@ -2,7 +2,7 @@
 {% block title %}
   PrijateliTree - Game Start
 {% endblock title %}
-{% block content}
+{% block content %}
   <h1>Get Ready to Play</h1>
   <h2 style="color:red;">Red</h2>
   <h3>or</h3>
